--- a/src/index.html
+++ b/src/index.html
@@ -15,21 +15,21 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- <load src="./partials/header.html" /> -->
+    <load src="./partials/header.html" />
 
     <main>
       <!-- Loads the specified .html file -->
 
-      <!-- <load src="./partials/hero.html" /> -->
+      <load src="./partials/hero.html" />
       <load src="./partials/about.html" />
-      <!-- <load src="./partials/catalog.html" />
+      <load src="./partials/catalog.html" />
       <load src="./partials/advertisement.html" />
       <load src="./partials/sale.html" />
       <load src="./partials/reviews.html" />
-      <load src="./partials/contact-us.html" /> -->
+      <load src="./partials/contact-us.html" />
     </main>
 
-    <!-- <load src="./partials/footer.html" /> -->
+    <load src="./partials/footer.html" />
 
     <script type="module" src="./main.js"></script>
   </body>
